@@ -78,6 +78,9 @@ VM摘要*部分将从清单文件中填充、以反映VM数量和总存储容量
 . 在_Target Capacity and protection Consid件_部分中、从几个存储选项中进行选择。
 +
 .. *平均数据精简率*：从三种常见数据精简率中进行选择。选择"1：1 -无缩减"、"1：1.25 - 20%缩减"或"1：1.5 - 33%缩减"。
++
+如果您不确定选择哪种比率，请选择*帮我决定*。此时将显示_Data精简比率助手_对话框。请选择适用于您的VM清单和存储空间的任何陈述。助理会建议适当的数据精简率。选择*应用*以使用建议的比率。
+
 .. *性能余量百分比*：输入添加到FSx for ONTAP文件系统容量中的容量增长百分比。
 +
 请注意、如果选择的数量小于20%、则无法创建卷快照来进行保护和长期备份。
